<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.SimpleMoviesSearchDemo.FilterFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_title_text"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <CheckBox
        android:id="@+id/checkBoxPopularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="124dp"
        android:text="@string/filter_sort_popularity_text" />

    <CheckBox
        android:id="@+id/checkBoxAdult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="174dp"
        android:text="@string/filter_sort_adult_text" />

</FrameLayout>